maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:3: error: ')' expected but ',' found.
  for (i<-0,11) {
           ^ShortestPathMaze:16: error: illegal start of simple expression
}
^